<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/messages_header"
        tools:ignore="TouchTargetSizeCheck">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true"
            tools:ignore="TouchTargetSizeCheck" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true"
            tools:ignore="TouchTargetSizeCheck" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/sync_header"
        tools:ignore="TouchTargetSizeCheck">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title"
            tools:ignore="TouchTargetSizeCheck" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title"
            tools:ignore="TouchTargetSizeCheck" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/theme_lb">
        <SwitchPreference
            app:key="theme"
            app:title="@string/cho_the"
            app:summaryOff="@string/light_lb"
            app:summaryOn="@string/dark_lb"
            app:defaultValue="false"
            />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            app:key="signOut"
            app:title="@string/sign_out_lb"
            />
    </PreferenceCategory>

</PreferenceScreen>