<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/wp_btn"
            android:icon="@drawable/ic_round_create_24"
            android:title="@string/write_new_post_lb" />
        <item
            android:id="@+id/sl_btn"
            android:icon="@drawable/ic_round_lock_clock_24"
            android:title="@string/sleep_timer_lb" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_round_person_24"
            android:title="@string/prf_st_lb" />
        <item
            android:id="@+id/settingFragment"
            android:icon="@drawable/ic_round_settings_24"
            android:title="@string/setting_lb" />
        <item
            android:id="@+id/view_prf_btn"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/searchbar_hint"
             />
        <item android:title="@string/recent_lb">
            <menu>
                <item
                    android:id="@+id/child1"
                    android:title="Time travel" />
                <item android:title="Time travel" />
            </menu>
        </item>
    </group>
</menu>