<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/prf_btn"
            android:layout_width="146dp"
            android:layout_height="143dp"
            android:contentDescription="@string/img_lb"
            android:src="@drawable/face22"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/name_title"
            android:layout_width="163dp"
            android:layout_height="66dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_name"
            app:layout_constraintStart_toEndOf="@+id/prf_btn"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Thomas" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="53dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/role_title"
            app:layout_constraintStart_toEndOf="@+id/prf_btn"
            app:layout_constraintTop_toBottomOf="@+id/name_title"
            tools:text="artist" />

        <ImageButton
            android:id="@+id/rewrite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/transparent_color"
            android:contentDescription="@string/img_lb"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_round_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>