<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/post_title"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_lb_hint"
                app:counterEnabled="true"
                app:counterMaxLength="500"
                app:startIconDrawable="@drawable/ic_round_edit_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/img_lb"
                android:src="@drawable/ic_launcher" />

            <VideoView
                android:id="@+id/videoView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="250dp" />
            <Button
                android:id="@+id/button"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_lb"
                />
        </LinearLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>